// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Counter /> layout renders Counter 1`] = `
<div
  className="mfui-beta-counter"
>
  <button
    className="mfui-beta-counter__btn mfui-beta-counter__btn_left"
    disabled={true}
    onClick={[Function]}
    type="button"
  >
    <span
      className="mfui-beta-counter__minus"
    >
      –
    </span>
  </button>
  <div
    className="mfui-beta-counter__input-box"
  >
    <input
      className="mfui-beta-counter__input"
      disabled={false}
      onBlur={[Function]}
      onChange={[Function]}
      value={0}
    />
  </div>
  <button
    className="mfui-beta-counter__btn mfui-beta-counter__btn_right"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    <span
      className="mfui-beta-counter__plus"
    >
      +
    </span>
  </button>
</div>
`;

exports[`<Counter /> layout renders Counter with props 1`] = `
<div
  className="mfui-beta-counter mfui-beta-counter_disabled test-class"
>
  <button
    className="mfui-beta-counter__btn mfui-beta-counter__btn_left"
    disabled={true}
    onClick={[Function]}
    type="button"
  >
    <span
      className="mfui-beta-counter__minus"
    >
      –
    </span>
  </button>
  <div
    className="mfui-beta-counter__input-box"
  >
    <input
      className="mfui-beta-counter__input"
      disabled={true}
      onBlur={[Function]}
      onChange={[Function]}
      value={10}
    />
  </div>
  <button
    className="mfui-beta-counter__btn mfui-beta-counter__btn_right"
    disabled={true}
    onClick={[Function]}
    type="button"
  >
    <span
      className="mfui-beta-counter__plus"
    >
      +
    </span>
  </button>
</div>
`;
